--- a/index.html
+++ b/index.html
@@ -4,20 +4,33 @@
   <style>
     body {
       background: #202028;
+      display: flex;
       color: #fff;
       font-family: sans-serif;
       font-size: 2em;
       text-align: center;
     }
+    .player {
+      flex: 1 1 auto;
+    }
     canvas {
       border: solid .2em #fff;
-      height: 90vh;
+      height: 85vh;
     }
   </style>
 </head>
 <body>
-  <div id="score"></div>
-  <canvas id="tetris" width="240" height="400"></canvas>
+  <div class="player">
+    <div class="score"></div>
+    <canvas class="tetris" width="240" height="400"></canvas>
+  </div>
+  <div class="player">
+    <div class="score"></div>
+    <canvas class="tetris" width="240" height="400"></canvas>
+  </div>
+  <script src="arena.js"></script>
+  <script src="player.js"></script>
+  <script src="tetris.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
