feat: WebSocket in the browser and in Node.js

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
       <canvas class="tetris" width="240" height="400"></canvas>
     </div>
   </template>
-  <script src="tetris-manager.js"></script>
-  <script src="arena.js"></script>
-  <script src="player.js"></script>
-  <script src="tetris.js"></script>
-  <script src="index.js"></script>
+  <script src="client/tetris-manager.js"></script>
+  <script src="client/connection-manager.js"></script>
+  <script src="client/arena.js"></script>
+  <script src="client/player.js"></script>
+  <script src="client/tetris.js"></script>
+  <script src="client/main.js"></script>
 </body>
 </html>
