feat: sync clients online status

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
       font-size: 2em;
       text-align: center;
     }
+
     .player {
       flex: 1 1 auto;
     }
+
+    .player.local canvas {
+      border-color: #fff;
+    }
+
     canvas {
-      border: solid .2em #fff;
+      border: solid .2em #707070;
       height: 85vh;
     }
   </style>
